--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "stealth-wallet/circuits/circomlib"]
-	path = stealth-wallet/circuits/circomlib
+[submodule "circuits/circomlib"]
+	path = circuits/circomlib
 	url = https://github.com/iden3/circomlib.git
