--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "circuits/circomlib"]
 	path = circuits/circomlib
 	url = https://github.com/iden3/circomlib.git
+[submodule "stealth-wallet/lib/forge-std"]
+	path = stealth-wallet/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
