--- a/stealth-wallet-app/package.json
+++ b/stealth-wallet-app/package.json
@@ -20,6 +20,7 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@kobalte/core": "^0.12.6",
     "@solidjs/router": "^0.13.0",
     "@types/web3": "^1.2.2",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.0",
     "ethers": "^6.11.1",
     "snarkjs": "^0.7.3",
+    "solid-icons": "^1.1.0",
     "solid-js": "^1.8.11",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
