--- a/stealth-wallet-app/tsconfig.json
+++ b/stealth-wallet-app/tsconfig.json
@@ -8,15 +8,8 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": [
-      "vite/client"
-    ],
+    "types": ["vite/client"],
     "noEmit": true,
     "isolatedModules": true,
-    "paths": {
-      "~/*": [
-        "./src/*"
-      ]
-    }
-  }
+  },
 }
