--- a/stealth-wallet-app/package.json
+++ b/stealth-wallet-app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "vite",
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc --noEmit && vite build",
     "serve": "vite preview"
   },
   "license": "MIT",
