--- a/stealth-wallet-app/tsconfig.json
+++ b/stealth-wallet-app/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "strict": true,
     "target": "ESNext",
     "module": "ESNext",
@@ -10,6 +11,6 @@
     "jsxImportSource": "solid-js",
     "types": ["vite/client"],
     "noEmit": true,
-    "isolatedModules": true,
-  },
+    "isolatedModules": true
+  }
 }
