--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ stealth-wallet/cache
 stealth-wallet/out
 stealth-wallet-app/.env
 stealth-wallet/.env
+stealth-wallet/broadcast/DeployMetaStealthAddressRegistry.s.sol/31337
