--- a/stealth-wallet-app/package.json
+++ b/stealth-wallet-app/package.json
@@ -26,7 +26,8 @@
     "@types/web3": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "ethers": "^6.11.1",
+    "ethereum-cryptography": "^2.1.3",
+    "ethereumjs-util": "^7.1.5",
     "snarkjs": "^0.7.3",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.11",
