--- a/stealth-wallet-app/package.json
+++ b/stealth-wallet-app/package.json
@@ -17,18 +17,20 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
-    "vite-plugin-solid": "^2.8.2"
+    "vite-plugin-node-polyfills": "^0.21.0",
+    "vite-plugin-solid": "^2.8.2",
+    "@types/eccrypto": "^1.1.6"
   },
   "dependencies": {
+    "@ethereumjs/util": "^9.0.3",
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@kobalte/core": "^0.12.6",
     "@solidjs/router": "^0.13.0",
-    "@types/web3": "^1.2.2",
     "big-integer": "^1.6.52",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "eccrypto": "^1.1.6",
     "ethereum-cryptography": "^2.1.3",
-    "ethereumjs-util": "^7.1.5",
     "snarkjs": "^0.7.3",
     "solid-icons": "^1.1.0",
     "solid-js": "^1.8.11",
