--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ stealth-wallet/out
 stealth-wallet-app/.env
 stealth-wallet/.env
 stealth-wallet/broadcast/DeployMetaStealthAddressRegistry.s.sol/31337
+stealth-wallet/broadcast/SetupLocalAnvil.s.sol/31337
