feat: setup bobs meta address in dev

--- a/stealth-wallet-app/package.json
+++ b/stealth-wallet-app/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "scripts": {
     "start": "vite",
-    "dev": "vite",
+    "dev": "npm run anvil & vite",
+    "anvil": "anvil --state ./dev-anvil-chain.json & bun run ./scripts/setup-meta-stealth-address.ts",
     "build": "tsc --noEmit && vite build",
     "serve": "vite preview"
   },
