--- a/stealth-wallet-app/package.json
+++ b/stealth-wallet-app/package.json
@@ -8,11 +8,14 @@
     "dev": "npm run anvil & vite",
     "anvil": "anvil --state ./dev-anvil-chain.json & bun run ./scripts/setup-meta-stealth-address.ts",
     "build": "tsc --noEmit && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/eccrypto": "^1.1.6",
     "autoprefixer": "^10.4.18",
+    "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "solid-devtools": "^0.29.2",
     "tailwindcss": "^3.4.1",
@@ -20,7 +23,7 @@
     "vite": "^5.0.11",
     "vite-plugin-node-polyfills": "^0.21.0",
     "vite-plugin-solid": "^2.8.2",
-    "@types/eccrypto": "^1.1.6"
+    "vitest": "^1.4.0"
   },
   "dependencies": {
     "@ethereumjs/util": "^9.0.3",
