--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "stealth-wallet/lib/forge-std"]
 	path = stealth-wallet/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "stealth-wallet/lib/openzeppelin-contracts"]
+	path = stealth-wallet/lib/openzeppelin-contracts
+	url = https://github.com/openzeppelin/openzeppelin-contracts
