refactor: one deployer script

--- a/stealth-wallet/Makefile
+++ b/stealth-wallet/Makefile
@@ -1,10 +1,10 @@
 -include .env
 
-setup-anvil:
-	forge script script/SetupLocalAnvil.s.sol --rpc-url 'http://127.0.0.1:8545' --broadcast -vvvv
+deploy-anvil:
+	forge script ./script/DeployContracts.s.sol --rpc-url 'http://127.0.0.1:8545' --broadcast -vvvv
 
 deploy-sepolia: confirm
-	forge script ./script/SetupSepolia.s.sol --rpc-url $(SEPOLIA_RPC_URL) --private-key $(PRIVATE_KEY) --broadcast --verify --etherscan-api-key $(ETHERSCAN_API_KEY) -vvvv
+	forge script ./script/DeployContracts.s.sol --rpc-url $(SEPOLIA_RPC_URL) --private-key $(PRIVATE_KEY) --broadcast --verify --etherscan-api-key $(ETHERSCAN_API_KEY) -vvvv
 
 confirm:
 	@echo -n "Are you sure? [y/N] " && read ans && [ $${ans:-N} = y ]
