docs: separate dir for bachelor thesis

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,19 @@
+# latex
 *.aux
 _minted-main
-main.bbl
-main.run.xml
-main.synctex.gz
-main-blx.bib
+*.bbl
+*.run.xml
+*.synctex.gz
+*-blx.bib
 indent.log
-main.fls
-main.lof
-main.log
-main.out
-main.toc
-main.blg
-main.fdb_latexmk
+*.fls
+*.lof
+*.log
+*.out
+*.toc
+*.blg
+*.fdb_latexmk
+
 circuits/build
 stealth-wallet/cache
 stealth-wallet/out
