docs: iitsrc poster

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ stealth-wallet/out
 stealth-wallet-app/.env
 stealth-wallet/.env
 stealth-wallet/broadcast/DeployContracts.s.sol/31337
+docs/iitsrc-poster/a0header.ps
