docs: add document structure in introduction

--- a/docs/bachelor/Makefile
+++ b/docs/bachelor/Makefile
@@ -1,3 +1,6 @@
+fast-build:
+	pdflatex -shell-escape -synctex=1 -interaction=nonstopmode -file-line-error -recorder  "main.tex"
+
 build-latex:
 	pdflatex -shell-escape -synctex=1 -interaction=nonstopmode -file-line-error -recorder  "main.tex"
 	bibtex main
