--- a/stealth-wallet-app/package.json
+++ b/stealth-wallet-app/package.json
@@ -8,7 +8,7 @@
     "dev": "anvil --state ./dev-anvil-chain.json & vite",
     "setup-bob": "bun run ./scripts/setup-meta-stealth-address.ts",
     "build": "tsc --noEmit && vite build",
-    "serve": "vite preview",
+    "serve": "vite preview --host 0.0.0.0",
     "test": "vitest"
   },
   "license": "MIT",
